[project]
name = "toydb"
version = "0.1.0"
description = "A toy database, built to learn storage internals cold."
requires-python = ">=3.12"
dependencies = []

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[dependency-groups]
dev = [
    "hypothesis>=6.155.7",
    "pytest>=9.1.1",
]
